@@ -51,7 +51,7 @@
 		<json-io.version>4.9.0</json-io.version>
 
 		<!-- snake yaml -->
-		<snake-yaml.version>1.26</snake-yaml.version>
+		<snake-yaml.version>2.2</snake-yaml.version>
 
 		<!-- joda time -->
 		<joda-time.version>2.10.6</joda-time.version>
@@ -76,9 +76,38 @@
 
 		<!-- jackson -->
 		<jackson.version>2.12.0</jackson.version>
+
+		<!-- chango client -->
+		<chango-client.version>2.0.1</chango-client.version>
+
+		<!-- rocksdb -->
+		<rocksdb.version>8.8.1</rocksdb.version>
+
+		<!-- kryo -->
+		<kryo.version>5.3.0</kryo.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>${kryo.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.rocksdb</groupId>
+			<artifactId>rocksdbjni</artifactId>
+			<version>${rocksdb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>co.cloudcheflabs.chango</groupId>
+			<artifactId>chango-client</artifactId>
+			<version>${chango-client.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snake-yaml.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
@@ -208,6 +237,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M7</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.surefire</groupId>
@@ -230,7 +262,7 @@
 						</goals>
 						<configuration>
 							<shadedArtifactAttached>true</shadedArtifactAttached>
-							<shadedClassifierName>executable</shadedClassifierName>
+							<shadedClassifierName>shaded</shadedClassifierName>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
@@ -249,37 +281,6 @@
 								</filter>
 							</filters>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.skife.maven</groupId>
-				<artifactId>really-executable-jar-maven-plugin</artifactId>
-				<version>1.0.5</version>
-				<configuration>
-					<flags>-Xmx1G</flags>
-					<classifier>executable</classifier>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>really-executable-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.4</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
